--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Website</title>
-  <meta http-equiv="refresh" content="0; url=https://example.com">
+  <meta http-equiv="refresh" content="0; url=https://audreychoo.riman.com">
 </head>
 <body>
   <p>If you are not redirected, <a href="https://audreychoo.riman.com">click here</a>.</p>
